# pathsim-flight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi_deployment.yml  tests.yml
src/pathsim_flight/: AirspeedConversions.py  __init__.py
src/pathsim_flight/atmosphere/: __init__.py  international_standard_atmosphere.py
src/pathsim_flight/jsbsim/: __init__.py  jsbsim_wrapper.py
src/pathsim_flight/utils/: __init__.py  airspeed_conversions.py
tests/atmosphere/: test_international_standard_atmosphere.py
tests/utils/: test_airspeed_conversions.py
