[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim-flight"
dynamic = ["version"]
description = "Flight Dynamics Blocks for PathSim"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PathSim Contributors"}
]
keywords = ["simulation", "flight dynamics", "aerospace", "aircraft", "6DoF"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pathsim",
    "numpy>=1.15",
    "scipy>=1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/pathsim/pathsim-flight"
Documentation = "https://docs.pathsim.org/flight"
Repository = "https://github.com/pathsim/pathsim-flight"
Issues = "https://github.com/pathsim/pathsim-flight/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pathsim_flight/_version.py"
